Change name of the service from naive to redis-api

--- a/high-performance-api-on-kubernetes/02-the-naive/kube-vegeta-api.yaml.tmpl
+++ b/high-performance-api-on-kubernetes/02-the-naive/kube-vegeta-api.yaml.tmpl
@@ -46,7 +46,7 @@ spec:
               memory: 500Mi
           env:
           - name: TARGET_URL
-            value: http://naive.default.svc.cluster.local:8080
+            value: http://redis-api.default.svc.cluster.local:8080
           - name: ATTACK_RATE
             value: "$ATTACK_RATE"
           ports:
